--- a/exercises/least-privilege-security-groups/starter/starter.yml
+++ b/exercises/least-privilege-security-groups/starter/starter.yml
@@ -23,13 +23,17 @@ Resources:
       - IpProtocol: tcp
         FromPort: 22
         ToPort: 22
-        CidrIp: 0.0.0.0/0
+        CidrIp: 10.156.30.0/24
   ApplicationASecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       VpcId: !Ref VPC
       GroupDescription: Security group for Application A servers
       SecurityGroupIngress:
+      - IpProtocol: tcp
+        FromPort: 22
+        ToPort: 22
+        SourceSecurityGroupId: !Ref BastionsSecurityGroup
       - IpProtocol: tcp
         FromPort: 80
         ToPort: 80
@@ -41,6 +45,10 @@ Resources:
       GroupDescription: Security group for Application B servers
       SecurityGroupIngress:
       - IpProtocol: tcp
+        FromPort: 22
+        ToPort: 22
+        SourceSecurityGroupId: !Ref BastionsSecurityGroup
+      - IpProtocol: tcp
         FromPort: 80
         ToPort: 80
-        CidrIp: 0.0.0.0/0
+        CidrIp: 10.156.36.0/24
